--- a/contactMe.html
+++ b/contactMe.html
@@ -88,7 +88,7 @@
                         </div>
 
                         <div class="m-3">
-                            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                            <button type="submit" class="btn btn-primary mb-2" disabled>Submit</button>
                         </div>
                     </div>
                 </div>
