--- a/index.html
+++ b/index.html
@@ -52,12 +52,18 @@
                 <div class="col-6 col-lg-6">
                     <h2>Alireza Rahmati</h2>
                     <p>
-                      Alireza is a dedicated learner and contributor, adept at tackling projects of all sizes, from small-scale endeavors to large-scale initiatives. He takes pride in his versatility, whether leading as a project manager or actively participating as a team member. Alireza values his connections and friendships as his greatest accolades. In the expansive realm of knowledge, he has honed his skills in AI programming, specializing in high-impact projects spanning signal, medical, and image processing, as well as pushing the boundaries in natural language processing (NLP).
+                      Alireza is passionate about learning and has devoted his life to acquiring knowledge. He considers his greatest skill to be his ability to learn and comprehend new concepts. To him, the world is like a puzzle or a set of letters, where anyone can create their own words from these pieces, resulting in infinite possibilities. As an avid learner, Alireza constantly strives to create something extraordinary. After years of studying programming, hardware, and electronics, he has been working in the fields of artificial intelligence and deep learning for several years. Currently, to expand his repertoire of puzzle pieces, he has embarked on learning MLOps.
                     </p>
                     <p>
                         <a href="https://scholar.google.com/citations?user=wFCXJt0AAAAJ&hl=en"><img src="assets/images/icons8-google-scholar-30.png" alt=""></a>
                         <a href="https://www.linkedin.com/in/alireza-rahmati-ar/"><img src="assets/images/icons8-linkedin-30.png" alt=""></a>
                         <a href="https://github.com/alireza0r"><img src="assets/images/icons8-github-30.png" alt=""></a>
+                    </p>
+                    <p class="qoute">
+                        The people who are crazy enough to think they can change the world are the ones who do.
+                    </p>
+                    <p>
+                        Steve Jobs
                     </p>
                 </div>
             </div>
