change the introduction

--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
                         <a href="https://github.com/alireza0r"><img src="assets/images/icons8-github-30.png" alt=""></a>
                     </p>
                     <p class="qoute">
-                        The people who are crazy enough to think they can change the world are the ones who do.
+                        &#x201F The people who are crazy enough to think they can change the world are the ones who do. &#x201F
+                        <br>Steve Jobs
                     </p>
-                    <p>
-                        Steve Jobs
-                    </p>
+                   
                 </div>
             </div>
         </div>
