--- a/resume.html
+++ b/resume.html
@@ -84,7 +84,7 @@
                   
                   <div class="mb-5">
                     <div class="d-flex justify-content-between">
-                      <p class="fs-4 fw-bold">Designing and Implementation of minimally invasive surgery simulator robot</p>
+                      <p class="fs-4 fw-bold">Designing and Implementation of minimally invasive surgery simulator</p>
                       <p>April 2024 - Present</p>
                     </div>
                     <p>Pars Sinuhe Pad, Tehran Province, Iran</p>
