--- a/contactMe.html
+++ b/contactMe.html
@@ -46,8 +46,8 @@
 
         <div class="container-fluid container-xl">
             <div>
-                <div class="d-flex justify-content-around">
-                    <div>
+                <div class="row row-gap-5">
+                    <div class="col-12 col-lg-6">
                         <h2 class="fw-bolder mt-5 text-decoration-underline link-underline-secondary link-offset-2">Get in touch</h2>
                         <div class="mt-5">
                             <label for="phone" class="fw-bold fs-5">Phone</label>
@@ -58,37 +58,39 @@
                         </div>
                     </div>
 
-                    <div class="mt-5 ">
-                        <div class="d-flex">
-                            <div class="m-3">
-                                <div class="form-group">
-                                    <label for="firstName">First Name</label>
-                                    <input type="text" class="form-control">
+                    <div class="col-12 col-lg-6">
+                        <div class="mt-5 ">
+                            <div class="d-flex">
+                                <div class="m-3">
+                                    <div class="form-group">
+                                        <label for="firstName">First Name</label>
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="m-3">
+                                    <div class="form-group">
+                                        <label for="lastName">Last Name</label>
+                                        <input type="text" class="form-control">
+                                    </div>
                                 </div>
                             </div>
                             <div class="m-3">
                                 <div class="form-group">
-                                    <label for="lastName">Last Name</label>
-                                    <input type="text" class="form-control">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" aria-describedby="emailHelp">
                                 </div>
                             </div>
-                        </div>
-                        <div class="m-3">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" aria-describedby="emailHelp">
+    
+                            <div class="m-3">
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
                             </div>
-                        </div>
-
-                        <div class="m-3">
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Example textarea</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    
+                            <div class="m-3">
+                                <button type="submit" class="btn btn-primary mb-2" disabled>Submit</button>
                             </div>
-                        </div>
-
-                        <div class="m-3">
-                            <button type="submit" class="btn btn-primary mb-2" disabled>Submit</button>
                         </div>
                     </div>
                 </div>
