--- a/projects.html
+++ b/projects.html
@@ -188,25 +188,22 @@
                     <details>
                       <summary class="text-success">more info.</summary>
 
-                      <div class="d-flex gap-3 justify-content-center">
-                        <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/p1.jpg" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
+                      <div class="row row-gap-5">
+                        <div class="col-12 col-lg-6">
+                          <div class="card" style="width: 16rem;">
+                            <img class="card-img-top mx-auto" src="assets/images/p1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"></p>
+                            </div>
                           </div>
                         </div>
   
-                        <!-- <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/p2.jpg" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
-                          </div>
-                        </div> -->
-  
-                        <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/p3.jpg" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
+                        <div class="col-12 col-lg-6">
+                          <div class="card" style="width: 16rem;">
+                            <img class="card-img-top mx-auto" src="assets/images/p3.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"></p>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -227,32 +224,40 @@
                   <div class="m-3">
                     <details>
                       <summary class="text-success">more info.</summary>
-                      <div class="d-flex gap-3 justify-content-center">
-                        <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/d1.jpg" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
+                      <div class="row row-gap-5">
+                        <div class="col-12 col-lg-3" class="projectsPhoto">
+                          <div class="card" style="width: 16rem;">
+                            <img class="card-img-top mx-auto" src="assets/images/d1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"></p>
+                            </div>
                           </div>
                         </div>
 
-                        <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/d3.jpg" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
+                        <div class="col-12 col-lg-3" class="projectsPhoto">
+                          <div class="card" style="width: 16rem;">
+                            <img class="card-img-top mx-auto" src="assets/images/d3.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"></p>
+                            </div>
                           </div>
                         </div>
 
-                        <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/d4.png" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
+                        <div class="col-12 col-lg-3" class="projectsPhoto">
+                          <div class="card" style="width: 16rem;">
+                            <img class="card-img-top mx-auto" src="assets/images/d4.png" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"></p>
+                            </div>
                           </div>
                         </div>
 
-                        <div class="card" style="width: 16rem;">
-                          <img class="card-img-top mx-auto" src="assets/images/d2.jpg" alt="Card image cap">
-                          <div class="card-body">
-                            <p class="card-text"></p>
+                        <div class="col-12 col-lg-3" class="projectsPhoto">
+                          <div class="card" style="width: 16rem;">
+                            <img class="card-img-top mx-auto" src="assets/images/d2.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <p class="card-text"></p>
+                            </div>
                           </div>
                         </div>
                       </div>
