--- a/contactMe.html
+++ b/contactMe.html
@@ -17,16 +17,17 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="d-flex flex-column">
-                    <a class="navbar-brand fs-3 fw-bold" href="#">
+                    <a class="navbar-brand fs-3 fw-bold" href="index.html">
                         Alireza Rahmati
                       </a>
                     <span>AI Programmer/Engineer</span>
                   </div>
 
                   <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNavAltMarkup">
-                    <div class="navbar-nav gap-lg-4 w-75 justify-content-lg-end">
-                        <a class="nav-link fs-5" href="aboutMe.html">About Me</a>
-                        <a class="nav-link fs-5" href="resume.html">Resume</a>
+                    <div class="navbar-nav gap-lg-3 w-75 justify-content-lg-end">
+                        <a class="nav-link fs-5" href="index.html">About Me</a>
+                        <a class="nav-link fs-5" href="education.html">Education</a>
+                        <a class="nav-link fs-5" href="resume.html">Work Exprience</a>
                         <a class="nav-link fs-5" href="projects.html">Projects</a>
                         <a class="nav-link fs-5" href="publication.html">Publications</a>
                         <a class="nav-link fs-5" href="contactMe.html">Contact</a>
