Add project to Education

--- a/education.html
+++ b/education.html
@@ -60,6 +60,44 @@
                       <ul>
                         <li>Thesis: Speech Emotion Recognition based on Reinforcement Learning</li>
                       </ul>
+
+
+                      <div class="mb-4 MS-projects">
+                        <h4 class="mb-3 mt-5">Projects</h4>
+                        <div class="d-flex justify-content-between">
+                          <p class="fw-bold">Speech Emotion Detection Using Reinforcement Learning</p>
+                          <div>
+                            <p class="p-0 m-0">August 2022 - May 2023</p>
+                            <p>Supervisor: Dr. Sanaz Seyedin</p>
+                          </div>
+                        </div>
+                        <div>
+                          <ul>
+                            <li>Real time speech emotion recognition.</li>
+                            <li>Developing new DDPG and PPO recurrent deep models (DNNs) based on inovative reply buffer.</li>
+                          </ul>
+                        </div>
+                      </div>
+        
+                      <div class="mb-5 MS-projects">
+                        <div class="d-flex justify-content-between">
+                          <p class="fw-bold">Speech environment for Reinforcement Learning</p>
+                          <div>
+                            <p class="p-0 m-0">August 2022 - December 2023</p>
+                            <p>Supervisor: Dr. Sanaz Seyedin</p>
+                          </div>
+                        </div>
+                        <div>
+                          <ul>
+                            <li>Developing an environment for RL.</li>
+                            <li>Simulating a real and noisy environments for training RL models (PyTorch and Gym libraries baesd).</li>
+                            <li>Combining two types of noise (stationary and dynamic) using a probability matrix.</li>
+                            <li>Designing two probability matrices to adjust the method of combining dynamic and
+                              static noises with <br> clean signal.</li>
+                            <li>Leverage MFCC features and SNR adjustment for enhanced performance.</li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
