new project added

--- a/projects.html
+++ b/projects.html
@@ -47,11 +47,28 @@
         <div class="container-fluid container-xl">
             <h3 class="m-3 text-center text-decoration-underline link-underline-secondary link-offset-2 mb-5">Projects</h3>
             <div class="items">
+
+                    <div class="items">
+
+        <div class="d-flex justify-content-between">
+          <p class="fs-4 fw-bold">Hardware-based Voice Assistant (Raspberry Pi 3B+, Linux Kernel Only)</p>
+          <p>November 2024 - March 2025</p>
+        </div>
+        <div>
+          <ul>
+            <li>Designed and implemented an offline voice assistant using Raspberry Pi 3B+ without a graphical interface, leveraging a minimal Raspbian kernel.</li>
+            <li>Integrated local voice activity detection (VAD) and automatic speech recognition (ASR) for real-time, low-latency speech input processing.</li>
+            <li>Applied LangChain and prompt engineering to interpret natural language queries and execute tasks (e.g., music playback, calendar creation, time, Q&A).</li>
+            <li>Used Microsoft TTS to convert processed responses into speech and play via onboard audio.</li>
+            <li>Designed and 3D-printed a custom enclosure for the device, ensuring both functionality and aesthetic appeal.</li>          
+          </ul>
+        </div>
+      </div>
               
               <div class="mb-5">
                 <div class="d-flex justify-content-between">
                   <p class="fs-4 fw-bold">Surgeon Simulator</p>
-                  <p>April 2024 - Present</p>
+                  <p>April 2024 - Octobr 2024</p>
                 </div>
                 <div>
                   <ul>
@@ -66,7 +83,7 @@
               <div class="mb-5">
                 <div class="d-flex justify-content-between">
                   <p class="fs-4 fw-bold">EEG Game Analyzer</p>
-                  <p>March 2024 - Present</p>
+                  <p>March 2024 - April 2024</p>
                 </div>
                 <div>
                   <ul>
